--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
-.App {
-  text-align: center;
+.star{
+  width:10px
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 730px) {
+  div .box {
+    width: 70%;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media only screen and (max-width: 425px) {
+  div .box {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 425px) {
+  div .box {
+    width: 100%;
   }
 }
